@@ -48,10 +48,12 @@ AC_DEFUN([AR_GCC_TARGET],[AC_REQUIRE([AC_PROG_CC])]
 #   $ar_distro_pretty_name = Full Distribution Name (Ubuntu 20.04.2 LTS, etc)
 #   $ar_distro_id = All lowercase identifier (ubuntu, debian, centos, etc)
 #   $ar_distro_id_like = Identifier(s) of similar distros (rhel fedora, etc)
+#   $ar_distro_package_type = Identifier of package type ('deb', 'rpm' or 'unknown')
 #
 AC_DEFUN([AR_GET_DISTRO],[]
   [
   AC_MSG_CHECKING(distribution)
+  m4_pattern_allow([^PKG_TYPE])
   ar_distro_name=$(./get_distro.pl NAME)
   ar_distro_version=$(./get_distro.pl VERSION)
   ar_distro_major=$(./get_distro.pl MAJOR)
@@ -59,9 +61,11 @@ AC_DEFUN([AR_GET_DISTRO],[]
   ar_distro_pretty_name=$(./get_distro.pl PRETTY_NAME)
   ar_distro_id=$(./get_distro.pl ID)
   ar_distro_id_like=$(./get_distro.pl ID_LIKE)
-  AC_MSG_RESULT([$ar_distro_pretty_name $ar_distro_version])
+  ar_distro_package_type=$(./get_distro.pl PKG_TYPE)
+AC_MSG_RESULT([$ar_distro_pretty_name $ar_distro_version])
   ]
 )
+
 # ===========================================================================
 #      https://www.gnu.org/software/autoconf-archive/ax_count_cpus.html
 # ===========================================================================
